# InitGL

./: CMakeLists.txt  README.md
glad/include/glad/: glad.h
glad/src/: glad.c
src/: initGL.cpp
